2010-11-11  Glenn Morris  <rgm@gnu.org>

	* smime.el (from): Restrict declaration to XEmacs.

	* nnir.el (gnus-group-topic-name): Autoload.

2010-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-insert): Don't break long line if it is because of
	kinsoku-bol characters in the line end.

2010-11-11  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-move-article): Fix to provide original group
	and subject.
	(nnir-warp-to-article): Don't fail on articles whose headers haven't
	been retrieved.

	* gnus-sum.el (gnus-summary-move-article): Use original group and
	subject for virtual articles such as those in an nnir summary buffer.

2010-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-treat-non-ascii): Make it work for XEmacs (at
	least 21.5).

	* smime.el (from): Declare it again for XEmacs.

2010-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-resend): Don't disable encoding unless it's
	already encoded.

	* nnimap.el (nnimap-update-info): Fix problem with `g' chopping of
	low-numbered articles.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-syntax-table): Simplify.

	* lpath.el: Fbind set-char-table-range for XEmacs 21.4 and SXEmacs 22.1.

	* gnus-art.el (article-treat-non-ascii): Use put-char-table instead of
	set-char-table-range for XEmacs.

2010-11-10  Glenn Morris  <rgm@gnu.org>

	* time-date.el (time-to-seconds): Always an alias on Emacs,
	never a real function.
	(with-no-warnings): Remove compat stub, now unused.
	(time-less-p): Doc fix.
	(time-to-number-of-days): Simplify.

	* smime.el (from): Remove unused declaration.

	* gnus-util.el (with-no-warnings): Remove compat stub, now unused.
	(gnus-float-time): On Emacs, always an alias.

	* ecomplete.el (with-no-warnings): Remove compat stub, now unused.
	(ecomplete-add-item): Use float-time on Emacs, else gnus-float-time.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>
